--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ readme = "README.md"
 [dependencies]
 halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = 'v0.2.0' }
 rand = "0.4"
+subtle = "2.4"
 num-bigint = {version = "0.2.2", features = ["rand"]}
 lazy_static = "1.4.0"
 num-traits = "0.2.8"
